--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
 body {
   margin-top: 50px;
+  background-image: url("../img/textured_paper.png");
+}
+
+.display-transformed-sentence {
+  display: none;
+}
+
+.jumbotron {
+  background-color: white;
 }
